bk_ida/gccida/c0/gen_split_950
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_950/src/insn-emit.c:8493:39: error: use of undeclared identifier 'machine_mode'
operands[2] = ix86_force_to_memory( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[1]), operands[1]); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_950/src/insn-emit.c:8493:54: error: expected expression
operands[2] = ix86_force_to_memory( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[1]), operands[1]); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_950/src/insn-emit.c:8494:39: error: use of undeclared identifier 'machine_mode'
operands[2] = gen_rtx_fmt_e( FLOAT, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operands), operands[2]); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_950/src/insn-emit.c:8494:54: error: expected expression
operands[2] = gen_rtx_fmt_e( FLOAT, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operands), operands[2]); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_950/src/insn-emit.c:8497:26: error: use of undeclared identifier 'machine_mode'
ix86_free_from_memory( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[1])); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_950/src/insn-emit.c:8497:41: error: expected expression
ix86_free_from_memory( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[1])); 
                                        ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_950/src/obj/insn-emit.o] Error 1
